# ForestWarbler-YatSenOS-V2

./: .gdbinit  Cargo.toml  Makefile
pkg/app/brktest/: Cargo.toml
pkg/app/brktest/src/: main.rs
pkg/app/counter/src/: main.rs
pkg/app/dinner/src/: main.rs
pkg/app/fish/: Cargo.toml
pkg/app/fish/src/: main.rs
pkg/app/fwsh/: Cargo.toml
pkg/app/fwsh/src/: main.rs
pkg/app/hello/: Cargo.toml
pkg/app/hello/src/: main.rs
pkg/app/mq/src/: main.rs
pkg/boot/src/: config.rs  fs.rs  lib.rs  main.rs
pkg/elf/: Cargo.toml
pkg/elf/src/: lib.rs
pkg/kernel/: Cargo.toml
pkg/kernel/config/: boot.conf
pkg/kernel/src/: lib.rs  main.rs
pkg/kernel/src/drivers/: filesystem.rs  input.rs  mod.rs  serial.rs  uart16550.rs
pkg/kernel/src/drivers/ata/: bus.rs  mod.rs
pkg/kernel/src/interrupt/: clock.rs  exceptions.rs  mod.rs  serial.rs
pkg/kernel/src/interrupt/apic/: ioapic.rs  xapic.rs
pkg/kernel/src/interrupt/syscall/: mod.rs  service.rs
pkg/kernel/src/memory/: frames.rs  gdt.rs  mod.rs  user.rs
pkg/kernel/src/proc/: context.rs  data.rs  manager.rs  mod.rs  paging.rs  pid.rs  process.rs  sync.rs
pkg/kernel/src/proc/vm/: heap.rs  mod.rs  mod_old.rs  stack.rs
pkg/kernel/src/utils/: func.rs  logger.rs  macros.rs  mod.rs  resource.rs
pkg/lib/: Cargo.toml
pkg/lib/src/: io.rs  lib.rs  macros.rs  rand.rs  sync.rs  syscall.rs
pkg/storage/src/: lib.rs
pkg/storage/src/common/: io.rs  metadata.rs
pkg/storage/src/fs/fat16/: bpb.rs  direntry.rs  file.rs  impls.rs
pkg/storage/src/partition/: mod.rs
pkg/syscall/src/: lib.rs
(+2 files in other folders)
