[package]
name = "yslib"
version.workspace = true
edition.workspace = true

[dependencies]
syscall_def = { workspace = true }
chrono = { workspace = true }
linked_list_allocator = { workspace = true, optional = true }
rand = { version = "0.8", default-features = false }
rand_chacha = { version = "0.3", default-features = false }

[features]
default = ["brk_alloc"]
kernel_alloc = []
brk_alloc = ["dep:linked_list_allocator"]
